More work on 3 conversations. Fixed bug where share box was still showing up on mobile on the bottom of the screen

--- a/html/style.css
+++ b/html/style.css
@@ -252,10 +252,15 @@ iframe {
     margin-bottom: 60px;
 }
 
+#share-box {
+    display: none;
+}
+
 /* ----- Share Box ----- */
 
 @media screen and (min-width: 1024px) {
     #share-box {
+        display: block;
         position: fixed;
         top: 10%;
         right: 4%;
